--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -4,11 +4,50 @@
 <head>
     <meta charset="utf-8"/>
     <title>Chat Room</title>
+    <style>
+        .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 15px;
+  border: none;
+  cursor: pointer;
+  width: 52%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+input:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+textarea {
+  width: 50%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 200px;
+}
+
+input {
+  width: 50%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  resize: none;
+  min-height: 50px;
+}
+    </style>
 </head>
 <body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
+
+    <h1>ChatBot</h1>
+
+    <textarea id="chat-log" cols="100" rows="20" readonly></textarea><br>
+    <input id="chat-message-input" placeholder="Type message.." type="text" size="100"><br>
+    <button id="chat-message-submit" type="button" class="btn">Send</button>
     {{ room_name|json_script:"room-name" }}
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
